--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </p>
 
 <div class="bdiv">
-    <button class= "button" type ="button">Start</button>
+    <button id="startButton" class= "startButtonClass" type ="button">Start</button>
 </div>
 
 
