--- a/index.html
+++ b/index.html
@@ -1,34 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+
 
 </head>
+
 <body>
-    
-    <h1>
-        Coding Quiz Challenge
 
-    </h1>
+    <section class="container" id="landingPage">
+        <header>
+            <h1>
+                <!-- create title for quiz -->
+            </h1>
+            <!--now create the explanation-->
+            <!-- here goes the start button-->
 
-    <p>
-        Test your knowledge with this timed coding quiz!
-    </p>
+        </header>
+    </section>
 
-<div class="bdiv">
-    <button id="startButton" class= "startButtonClass" type ="button">Start</button>
-</div>
+    <section class="container" id="quizPage">
+        <hmain>
+            <h4>Time: <span id="timer"></span></h4>
+            <h1 id="questions">
+                <!-- Questions -->
+            </h1>
+            <ul>
+            <!-- create dynamic li tag-->
+            <!-- inside those li tag need to create buttons-->
+
+            </ul>
+
+        </main>
+    </section>
+
+    <section class="container" id="scorePage">
+        <!--add the score with id score-->
+        <!--message to the user-->
+        <!--create try again button-->
+        <!--create go back button-->
+
+    </section>
 
 
 
 
 
 
-
+    <script src="script.js"></script>
 </body>
+
 </html>
