creating list items in java

--- a/index.html
+++ b/index.html
@@ -16,23 +16,22 @@
     <section class="container" id="landingPage">
         <header>
             <h1>
-                <!-- create title for quiz -->
-            </h1>
-            <!--now create the explanation-->
-            <!-- here goes the start button-->
+                QUIZ </h1>
+            <p>Test your knowledge with this timed multiple choice quiz!</p>
+            <button id="startButton" class="sButton">Start</button>
 
         </header>
     </section>
 
     <section class="container" id="quizPage">
-        <hmain>
+        <main>
             <h4>Time: <span id="timer"></span></h4>
             <h1 id="questions">
-                <!-- Questions -->
+                <!-- Questions  -->
             </h1>
-            <ul>
-            <!-- create dynamic li tag-->
-            <!-- inside those li tag need to create buttons-->
+            <ul class="list1">
+                <!-- create dynamic li tag-->
+                <!-- inside those li tag need to create buttons-->
 
             </ul>
 
