--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Timed Quiz</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -18,13 +18,13 @@
             <h1>
                 QUIZ </h1>
             <p>Test your knowledge with this timed multiple choice quiz!</p>
-            <button id="startButton" class="sButton">Start</button>
-
+            <div class="bDiv"> <button id="startButton" class="sButton">Start</button>
+            </div>
         </header>
     </section>
 
     <section class="container" id="quizPage">
-        <main>
+        <div>
             <h4>Time: <span id="timer"></span></h4>
             <h1 id="questions">
                 <!-- Questions  -->
@@ -35,16 +35,16 @@
 
             </ul>
 
-        </main>
+        </div>
     </section>
 
-    <section class="container" id="scorePage">
+    <div id=#score class="container" id="scorePage">
         <!--add the score with id score-->
         <!--message to the user-->
         <!--create try again button-->
         <!--create go back button-->
 
-    </section>
+    </div>
 
 
 
