--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section class="container" id="quizPage">
         <div>
-            <h4>Time: <span id="timer"></span></h4>
+            <h4>Seconds: <span id="timer"></span></h4>
             <h1 id="questions">
                 <!-- Questions  -->
             </h1>
