--- a/index.html
+++ b/index.html
@@ -26,13 +26,24 @@
     <section class="container" id="quizPage">
         <div>
             <h4>Seconds: <span id="timer"></span></h4>
-            <h1 id="questions">
+            <div id="questions">
+
+
                 <!-- Questions  -->
-            </h1>
-            <ul class="list1">
+            </div>
+            <ul id="list1">
                 <!-- create dynamic li tag-->
                 <!-- inside those li tag need to create buttons-->
+                <div class="answerB">
 
+                    <button>A</button>
+                    <button>B</button>
+                    <button>C</button>
+                    <button>D</button>
+
+
+
+                </div>
             </ul>
 
         </div>
