--- a/index.html
+++ b/index.html
@@ -31,16 +31,15 @@
 
                 <!-- Questions  -->
             </div>
-            <ul id="list1">
+            <ul id="list1" class="qlist">
                 <!-- create dynamic li tag-->
                 <!-- inside those li tag need to create buttons-->
                 <div class="answerB">
 
-                    <button>A</button>
-                    <button>B</button>
-                    <button>C</button>
-                    <button>D</button>
-
+                    <button></button>
+                    <button></button>
+                    <button></button>
+                    <button></button>
 
 
                 </div>
