--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    
 <body>
 
-<section class='container' id='landingPage'>
+<section class="container" id="landingPage">
 <header>
 <h1>
 
@@ -22,7 +22,7 @@
 
 <p>Test your knowledge with a timed multiple choice quiz</p>
 
-<div class="bDiv"> <button id="startButton" class='sButton'>Start</button>
+<div class="bDiv"> <button id="startButton" class="sButton">Start</button>
 </header>
 
 
@@ -34,7 +34,7 @@
 <section id ="container2" id="quizPage">
 
 
-<h4>Seconds <span id="timer"></span></h4>
+<h4>Seconds: <span id="timer"></span></h4>
 
 </section>
 
@@ -157,5 +157,7 @@
 
 
 </body>
+
+<script src="script.js"></script>
 
 </html>
