--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div id="buttons">
 
 
-<button class="answerB">Red</button>
+<button class="correct">Red</button>
 <button class="answerB">Blue</button>
 <button class="answerB">Yellow</button>
 <button class="answerB">Green</button>
