--- a/index.html
+++ b/index.html
@@ -30,34 +30,38 @@
     <section id="quizPage" class="">
         <section>
             <span id="timer"></span>
+            <span id="score"></span>
         </section>
         <div class="containerQ">
             <h2 id="questionDisplay"></h2>
 
             <div id="answersList">
-                <button id="a1">answer</button>
-                <button id="a2">answer</button>
-                <button id="a3">answer</button>
-                <button id="a4">answer</button>
+                <button id="a1"></button>
+                <button id="a2"></button>
+                <button id="a3"></button>
+                <button id="a4"></button>
             </div>
         </div>
     </section>
+
+
+
+
+
+    <section id="enterinitial" class="">
+        <h3>Final Score: <span id="displayscore"></span></h3>
+        <h6>Save your initials: <span><input type="text" id="initials"></span></h6>
+        <button id="initialSaver">Submit Initials</button>
+    </section>
+
 
     <section id="scorePage" class="">
         <h1>HighScore</h1>
         <div class="highscore-container">
         </div>
-        <button id="go-back"> Go Back</button>
-        <button id="clear-scores"> Clear Scores</button>
+        <button id="save"> Save Score:</button>
+
     </section>
-
-    <section id="enter-initial" class="hide">
-        <h3>Final Score: <span id="display-score"></span></h3>
-        <h6>Save your initials: <span><input type="text" id="initials"></span></h6>
-    </section>
-
-
-
 
 
 
