hide previous page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
 
 
-    <section id="quizPage" class="">
+    <section id="quizPage" class="hide">
         <section>
             <span id="timer"></span>
             <span id="score"></span>
@@ -48,14 +48,14 @@
 
 
 
-    <section id="enterinitial" class="">
+    <section id="enterInitial" class="hide">
         <h3>Final Score: <span id="displayscore"></span></h3>
         <h6>Save your initials: <span><input type="text" id="initials"></span></h6>
         <button id="initialSaver">Submit Initials</button>
     </section>
 
 
-    <section id="scorePage" class="">
+    <section id="scorePage" class="hide">
         <h1>HighScore</h1>
         <div class="highscore-container">
         </div>
