--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
     </section>
 
 
-    <section id="quizPage" class="hide">
+    <section id="quizPage" class="">
         <section>
             <span id="timer"></span>
             <span id="score"></span>
+            
         </section>
         <div class="containerQ">
             <h2 id="questionDisplay"></h2>
@@ -48,16 +49,16 @@
 
 
 
-    <section id="enterInitial" class="hide">
+    <section id="enterInitial" class="">
         <h3>Final Score: <span id="displayscore"></span></h3>
         <h6>Save your initials: <span><input type="text" id="initials"></span></h6>
-        <button id="initialSaver">Submit Initials</button>
+        <button id="initialSaver" >Submit Initials</button>
     </section>
 
 
-    <section id="scorePage" class="hide">
+    <section id="scorePage" class="">
         <h1>HighScore</h1>
-        <div class="highscore-container">
+        <div class="highscorecontainer">
         </div>
         <button id="save"> Save Score:</button>
 
