--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 QUIZ
             </h1>
 
-            <p>Test your knowledge with a timed multiple choice quiz</p>
+            <p>Learn about JS with this multipe choice quiz</p>
 
             <div class="bDiv"> <button id="startButton" class="sButton">Start</button>
         </header>
@@ -27,7 +27,7 @@
     </section>
 
 
-    <section id="quizPage" class="">
+    <section id="quizPage" class="hide">
         <section>
             <span id="timer"></span>
             <span id="score"></span>
@@ -49,18 +49,19 @@
 
 
 
-    <section id="enterInitial" class="">
+    <section id="enterInitial" class="hide">
         <h3>Final Score: <span id="displayscore"></span></h3>
         <h6>Save your initials: <span><input type="text" id="initials"></span></h6>
         <button id="initialSaver" >Submit Initials</button>
     </section>
 
 
-    <section id="scorePage" class="">
-        <h1>HighScore</h1>
+    <section id="scorePage" class="hide">
+        <h2>HighScore</h2>
         <div class="highscorecontainer">
         </div>
         <button id="save"> Save Score:</button>
+        <button id = "goback"> Try Again</button>
 
     </section>
 
