--- a/highscores.html
+++ b/highscores.html
@@ -4,41 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sorePage</title>
+    <title>ScorePage</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+    <div id = "scorelist">
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <h2>HighScore</h2>
-    <div class="highscorecontainer">
-
-        <ul id="scorePage">
-
-        </ul>
+        
     </div>
 
 
+  
+    <footer class="footer">
+        <a href= "index.html"> Play Again</button></a>
+
+        <button id="clearScores"> Clear Scores</button>
+        <!-- Add eventListeners to go back to landingPage -->
+        <!-- Add eventListner to clear Scores -->
 
 
-    <button id="save"> Save Score:</button>
-    <button id="goback"> Try Again</button>
+    </footer>
 
 
 
@@ -49,7 +38,8 @@
 
 
 
-
+    
+    <Script src="highscore.js"></Script>
 
 </body>
 
