--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <p>Learn about JS with this multipe choice quiz</p>
 
-            <div class="bDiv"> <button id="startButton" class="sButton">Start</button>
+           <div class="bDiv"> <button id="startButton" class="sButton" >Start </button> </div>
         </header>
 
     </section>
@@ -49,7 +49,7 @@
 
 
 
-    <section id="enterInitial"  class="hide">
+    <section id="enterInitial" style= "display:none" >
         <h3>All Done! Your final Score is: <span id="displayScore"></span></h3>
         <h6>Save: <span><input type="text" id="initials"></span></h6>
        <a href= "highscores.html" button id="initialSaver" type="submit">Submit Initials</button> </a>
