--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
 
 
     <section id="enterInitial" style= "display:none" >
-        <h3>All Done! Your final Score is: <span id="displayScore"></span></h3>
-        <h6>Save: <span><input type="text" id="initials"></span></h6>
-       <a href= "highscores.html" button id="initialSaver" type="submit">Submit Initials</button> </a>
+        <div class= "lastContainer">
+        <h3><br>All Done!<br>
+             Your final Score is: <span id="displayScore"></span></h3><br>
+        <br><h6>Save: <span><input type="text" id="initials"></span></h6><br>
+       <a href= "highscores.html" button id="initialSaver"  type="submit">Submit Initials</button> </a>
         <!-- add eventListener to save initials and score in local storage -->
 
-
+            </div>
 
 
     </section>
