added dynamic score list

--- a/highscores.html
+++ b/highscores.html
@@ -12,25 +12,28 @@
 <h3>HighScores</h3>
     <div id = "scorelist" >
 
+        <ul id = "initial-scoreList">
 
+        </ul>
 
         
     </div>
 
 
-  
-    <footer class="footer">
-        <a href= "index.html"> Play Again</button></a>
+  <container class="lastPage">
+    <div class="scores">
+        <a  href= "index.html"> Play Again</a>
+        <br> <br>
 
-        <button id="clearScores"> Clear Scores</button>
+        <button id="clearScores" class= "clearButton">Clear Scores</button>
         <!-- Add eventListeners to go back to landingPage -->
         <!-- Add eventListner to clear Scores -->
 
 
-    </footer>
+    </div>
 
 
-
+</container>
 
 
 
