added clearLocalStorage function and click event

--- a/highscores.html
+++ b/highscores.html
@@ -25,7 +25,7 @@
         <a  href= "index.html"> Play Again</a>
         <br> <br>
 
-        <button id="clearScores" class= "clearButton">Clear Scores</button>
+        <button onclick="clearLocalStorage()" class= "clearButton">Clear Scores</button>
         <!-- Add eventListeners to go back to landingPage -->
         <!-- Add eventListner to clear Scores -->
 
