fixed timer function

--- a/highscores.html
+++ b/highscores.html
@@ -22,10 +22,10 @@
 
   <container class="lastPage">
     <div class="scores">
-        <a  href= "index.html"> Play Again</a>
+        <a  href= "index.html"> Play Again</button></a>
         <br> <br>
 
-        <button onclick="clearLocalStorage()" class= "clearButton">Clear Scores</button>
+        <button onclick= "clearLocalStorage()" class= "clearButton">Clear Scores</button>
         <!-- Add eventListeners to go back to landingPage -->
         <!-- Add eventListner to clear Scores -->
 
