--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
             <p>Learn about JS with this multipe choice quiz</p>
 
-           <div class="bDiv"> <button id="startButton" class="sButton" >Start </button> </div>
-        </header>
-
+           <div class="bDiv"> <button id="startButton" class="sButton" >Start </button> <br>
+           <a href= "highscores.html"><button class="HSPage" type="submit">View HighScores</button></a>
+</div>
     </section>
 
 
