--- a/highscores.html
+++ b/highscores.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ScorePage</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
 
 
     
-    <Script src="highscore.js"></Script>
+    <Script src="assets/JS/highscore.js"></Script>
 
 </body>
 
