--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game JS</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 
 </head>
@@ -76,7 +76,7 @@
 
 </body>
 
-<script src="script.js"></script>
+<script src="assets/JS/script.js"></script>
 
 
 </html>
